Revision history for Data-Dumper-Compact

0.003003 - 2019-05-29
  - Add versions to everything so people can depend on them
  - Don't barf on empty array/hash refs

0.003002 - 2019-05-16
  - Doc improvements for JSON::Dumper::Compact

0.003001 - 2019-05-16
  - Bugfix: actually export the right subroutine name

0.003000 - 2019-05-16
  - JSON dumping and rehydrating support

0.002003 - 2019-05-15
  - Render blessed hashrefs and arrayrefs using DDC logic

0.002002 - 2019-05-10
  - Collapse single key/value in list/array correctly

0.002001 - 2019-05-09
  - Fix stupid documentation error

0.002000 - 2019-05-09
  - Add Devel::DDCWarn in the style of Devel::Dwarn

0.001001 - 2019-05-09
  - Remove subref test because B::Deparse output varies between perl versions

0.001000 - 2019-05-09
  - initial release