@@ -1,5 +1,7 @@
 Revision history for Data-Dumper-Compact
 
+  - Add tweak feature to DwarnT
+
 0.003003 - 2019-05-29
   - Add versions to everything so people can depend on them
   - Don't barf on empty array/hash refs
